Tworzenie link do json
