# src/Controller/Api/CourseController.php
@@ -11,14 +11,21 @@ use App\Security\Role;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Attribute\Route;
-use Symfony\Component\Serializer\Annotation\Groups;
+use Symfony\Component\HttpFoundation\JsonResponse;
+use Symfony\Component\HttpFoundation\Request;
+use Doctrine\Persistence\ManagerRegistry;
 use Doctrine\ORM\EntityManagerInterface;
+use Symfony\Component\HttpKernel\Exception\HttpException;
+
 use Symfony\Component\Routing\Generator\UrlGeneratorInterface;
-use Nelmio\ApiDocBundle\Annotation\Model;
 use JMS\Serializer\SerializerBuilder;
 use JMS\Serializer\SerializerInterface;
-use Symfony\Component\HttpFoundation\JsonResponse;
+use Nelmio\ApiDocBundle\Annotation\Model;
 use Symfony\Component\HttpKernel\Attribute\MapQueryParameter;
+use Doctrine\ORM\QueryBuilder;
+
+use Psr\Log\LoggerInterface;
+use OpenApi\Attributes as OA;
 
 #[Route("/api", "")]
 class CourseController extends AbstractController
@@ -29,11 +36,35 @@ class CourseController extends AbstractController
 
     public function __construct(EntityManagerInterface $entityManager, UrlGeneratorInterface $urlGenerator, SerializerInterface $serializer) {
 
-        $this->entityManager = $entityManager;
-        $this->urlGenerator = $urlGenerator;
-        $this->serializer = $serializer;
+            $this->entityManager = $entityManager;
+            $this->urlGenerator = $urlGenerator;
+            $this->serializer = $serializer;
     }
 
+
+    #[Route('/test/{id}', name: 'api_test', methods: ['GET'])]
+    public function test(int $id) : Response
+    {
+        $course = $this->entityManager->getRepository(Course::class)->find($id);
+        
+        if (!$course) {
+            return new JsonResponse(['message' => 'Course not found'], 404);
+        }
+        
+        $teacher = $course->getTeacher();
+     
+        $data = $course->toArray();
+        $data['teacher'] = $teacher ? $teacher->toArray() : null;
+        $data['teacher']['_links'] = ['self' => [
+                'href' => $this->urlGenerator->generate('api_teachers_id', ['id' => $teacher->getId()], UrlGeneratorInterface::ABSOLUTE_URL)
+                ]];
+        $jsonContent = $this->serializer->serialize($data, 'json', \JMS\Serializer\SerializationContext::create()->setSerializeNull(true));
+        return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
+    }
+
+
+
+    
     /**
      * Wyświetla listę kursów.
      *
@@ -43,53 +74,177 @@ class CourseController extends AbstractController
     #[OA\Tag(name: "Operacje na kursach")]
     #[OA\Response(
         response: 200,
-        description: 'Zwraca kurs o podanym identyfikatorze',
-        content: new OA\JsonContent(
-            type: 'array',
-            items: new OA\Items(ref: new Model(type: Student::class))
-        ))
-    ]
+        description: 'Zwraca listę kursów',
+        content: new OA\JsonContent(ref: "#/components/schemas/Course")
+    )]
     #[OA\Response(
         response: 404,
         description: 'Not Found'
-    )]   
-    #[Route('/courses', name: 'api_course', methods: ['GET'])]
-    public function getCourses() 
-    {
-        
-        $courses = $this->entityManager->getRepository(Course::class)->findAll();        
+    )]
 
-        $data = [];
+    #[Route('/courses', name: 'api_courses', methods: ['GET'])]
+    public function getCourses(
+        #[MapQueryParameter] int $page,
+        #[MapQueryParameter] int $limit
+    ) : Response
+    {  
         
-        foreach ($courses as $course) {
-            $teacher = $course->getTeacher();
-            $data[] = [                
-                'id' => $course->getId(),
-                'title' => $course->getTitle(),
-                'description' => $course->getDescription(),
-                'teacher' => [
-                    'id' => $teacher ? $teacher->getId() : null,
-                    'name' => $teacher ? $teacher->getName() : null,
-                    '_links' => ['self' => [
-                                'href' => $this->urlGenerator->generate('api_students-id', ['id' => $teacher->getId()], UrlGeneratorInterface::ABSOLUTE_URL)
-                            ]
-                        ]       
-                ],
-                'capacity' => $course->getCapacity(),
-                'active' => $course->isActive()             
-            ];
-        }
+        $query = $this->entityManager->getRepository(Course::class)
+                ->createQueryBuilder('c')
+                ->getQuery(); 
+                
+        $paginator = new Doctrine\ORM\Tools\Pagination\Paginator($query);
+        $paginator->getQuery()
+                    ->setFirstResult($limit * ($page - 1)) // Przesunięcie zależne od numeru strony
+                    ->setMaxResults($limit); // Maksymalna liczba wyników
+
+
+                    $courses = [];
+                    foreach ($paginator as $course) {
+                        $teacher = $course->getTeacher();
+                        $courses[] = [
+                            'id' => $course->getId(),
+                            'title' => $course->getTitle(),
+                            'description' => $course->getDescription(),
+                            'teacher' => $teacher ? [
+                                'id' => $teacher->getId(),
+                                'name' => $teacher->getName(),
+                            ] : null,
+                            'capacity' => $course->getCapacity(),
+                            'active' => $course->isActive(),
+                        ];
+                    }
+                
+                    $jsonContent = $this->serializer->serialize([
+                        'data' => $courses,
+                        'current_page' => $page,
+                        'items_per_page' => $limit,
+                        'total_items' => count($paginator),
+                    ], 'json');
+                
+        return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);           
+
+        // $courses = $this->entityManager->getRepository(Course::class)->findAll();       
+        // $data = [];
+        
+        // foreach ($courses as $course) {
+        //     $teacher = $course->getTeacher();
+        //     $data[] = [                
+        //         'id' => $course->getId(),
+        //         'title' => $course->getTitle(),
+        //         'description' => $course->getDescription(),
+        //         'teacher' => [
+        //             'id' => $teacher ? $teacher->getId() : null,
+        //             'name' => $teacher ? $teacher->getName() : null,
+        //             '_links' => ['self' => [
+        //                         'href' => $this->urlGenerator->generate('api_students_id', ['id' => $teacher->getId()], UrlGeneratorInterface::ABSOLUTE_URL)
+        //                     ]
+        //                 ]       
+        //         ],
+        //         'capacity' => $course->getCapacity(),
+        //         'active' => $course->isActive()             
+        //     ];
+        // }
     
+        //$jsonContent = $this->serializer->serialize($data, 'json', \JMS\Serializer\SerializationContext::create()->setSerializeNull(true));
+        //return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
+    }
+    
+    /**
+     * Wyświetla kurs.
+     *
+     * Wywołanie wyświetla kurs wraz z jego linkiem do szczegółów.
+     * 
+     */
+    #[OA\Tag(name: "Operacje na kursach")]
+    #[OA\Response(
+        response: 200,
+        description: 'Zwraca kursów o podanym identyfikatorze',
+        content: new OA\JsonContent(ref: "#/components/schemas/Course")
+    )]
+    #[Route('/courses/{id}', name: 'api_courses_id', methods: ['GET'])]
+    public function getCourse(int $id) : Response
+    {
+        $course = $this->entityManager->getRepository(Course::class)->find($id);
+        
+        if (!$course) {
+            return new JsonResponse(['message' => 'Course not found'], 404);
+        }
+        
+        $teacher = $course->getTeacher();
+        $data = [
+            'id' => $course->getId(),
+            'title' => $course->getTitle(),
+            'description' => $course->getDescription(),
+            'teacher' => [
+                'id' => $teacher ? $teacher->getId() : null,
+                'name' => $teacher ? $teacher->getName() : null,
+                '_links' => ['self' => [
+                            'href' => $this->urlGenerator->generate('api_teachers_id', ['id' => $teacher->getId()], UrlGeneratorInterface::ABSOLUTE_URL)
+                        ]
+                    ]       
+            ],
+            'capacity' => $course->getCapacity(),
+            'active' => $course->isActive()             
+        ];
+        
         $jsonContent = $this->serializer->serialize($data, 'json', \JMS\Serializer\SerializationContext::create()->setSerializeNull(true));
         return new Response($jsonContent, 200, ['Content-Type' => 'application/json']);
     }
     
-    
-    
-    public function index(): Response
+
+
+    /**
+     * Dodaje kurs.
+     *
+     * Wywołanie dodaje nowy kurs.
+     * 
+     */
+    #[OA\Tag(name: "Operacje na kursach")]
+    #[OA\Response(
+        response: 201,
+        description: 'Dodaje kurs',
+        content: new OA\JsonContent(ref: "#/components/schemas/Course")
+    )]
+    #[OA\RequestBody(
+        description: 'Dane kursu',
+        required: true,
+        content: new OA\JsonContent(ref: "#/components/schemas/Course")
+    )]
+    #[Route('/courses', name: 'api_courses_add', methods: ['POST'])]
+    public function addCourse(Request $request) : Response
     {
-        return $this->render('api/course/index.html.twig', [
-            'controller_name' => 'CourseController',
-        ]);
+        $data = json_decode($request->getContent(), true);
+        
+        $course = new Course();
+        $course->setTitle($data['title']);
+        $course->setDescription($data['description']);
+        $course->setCapacity($data['capacity']);
+        $course->setActive($data['active']);
+        
+        $teacher = $this->entityManager->getRepository(Teacher::class)->find($data['teacher_id']);
+        $course->setTeacher($teacher);
+        
+        $this->entityManager->persist($course);
+        $this->entityManager->flush();
+        
+        $data = [
+            'id' => $course->getId(),
+            'title' => $course->getTitle(),
+            'description' => $course->getDescription(),
+            'teacher' => [
+                'id' => $teacher ? $teacher->getId() : null,
+                'name' => $teacher ? $teacher->getName() : null,
+                '_links' => ['self' => [
+                            'href' => $this->urlGenerator->generate('api_teachers_id', ['id' => $teacher->getId()], UrlGeneratorInterface::ABSOLUTE_URL)
+                        ]
+                    ]       
+            ],
+            'capacity' => $course->getCapacity(),
+            'active' => $course->isActive()             
+        ];
+        
+        $jsonContent = $this->serializer->serialize($data, 'json', \JMS\Serializer\SerializationContext::create()->setSerializeNull(true));
+        return new Response($jsonContent, 201, ['Content-Type' => 'application/json']);
     }
 }
